# bdboard

./: .gitignore  .jscpd.json  8pdjckcq2v8turdkppegdgcivturqcs6  AGENTS.md  COMPLETION_SUMMARY_bdboard-36v.md  COMPLETION_SUMMARY_bdboard-bcx.md  COMPLETION_SUMMARY_bdboard-yk9.md  CONTRIBUTING.md  DOLT_REMOTE.md  Makefile  README.md  SESSION_SUMMARY.md  bead-planner.json  lychee.toml  manifest  mtuutkcsepj2qufnlrc4fchgmqevkgf0.darc  plan.json  plan2.json  pyproject.toml
.beads/: README.md  config.yaml  interactions.jsonl  metadata.json
.beads/formulas/: README.md  code-health-audit.formula.json  diataxis-generate.formula.json  diataxis-html.formula.json  diataxis-maintain.formula.json  docs-validation.formula.json  flowdoc-generate.formula.json  flowdoc-html.formula.json  flowdoc-maintain.formula.json
.beads/hooks/: pre-push
.github/workflows/: code-health.yml
__docs/: Architecture.md  Troubleshooting.md  _FlowDocGuide.md  _Manifest.md  index.md
__docs/Concepts/: BdCliSourceOfTruth.md  CsrfProtection.md  DeriveLayer.md  (+15 more)
_docs/: FAQ.md  Overview.md  _FlowDocGuide.md  _Manifest.md  index.md
docs/: VERIFICATION_bdboard-yk9.md  index.html  style.css
tests/: conftest.py  css_test_utils.py  test_activity_filter_contrast.py  test_api_bead_audit.py  test_api_bead_gate.py  test_api_coordination_count.py  test_api_epic_swarm.py  test_api_gates.py  test_api_history.py  test_api_memory.py  test_bd_closed_history.py  test_bd_formulas.py  test_bd_gates.py  test_bd_memories.py  test_bd_status_summary.py  test_bd_swarm.py  test_bead_status_contrast.py  test_board_coordination_strip.py  test_board_counts_filter_sync.py  test_build_docs_site.py  test_churn_bar_contrast.py  test_closed_filter_contrast.py  test_counts_contrast.py  test_created_bar_contrast.py  test_dark_theme_contrast.py  test_deferred_fallback.py  test_derive_counts.py  test_derive_epics.py  test_derive_gates.py  test_derive_history.py  test_derive_hygiene.py  test_derive_lanes_swarm.py  test_derive_lanes_waits_for.py  test_derive_merge_slot.py  test_derive_swarm.py  test_dolt_sync_badge.py  test_epic_status_contrast.py  test_field_edit.py  test_field_edit_concurrency.py  test_field_edit_status_gate.py  (+30 more)
tools/: build_docs_site.py
(+362 files in other folders)
