[project]
name = "bdboard"
version = "0.1.0"
description = "Python+FastAPI+HTMX dashboard for bd (beads) workspaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "typer>=0.12",
    "markdown-it-py>=3.0",
    "watchfiles>=0.21",
    "python-multipart>=0.0.7",
    "pytest>=8.0",
]

[project.scripts]
bdboard = "bdboard.cli:main"
pytest = "bdboard.pytest_shim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bdboard"]
