[project]
name = "bdboard"
version = "0.1.0"
description = "Python+FastAPI+HTMX dashboard for bd (beads) workspaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "typer>=0.12",
    "markdown-it-py>=3.0",
    "watchfiles>=0.21",
    "python-multipart>=0.0.7",
    "pytest>=8.0",
]

[project.scripts]
bdboard = "bdboard.cli:main"
pytest = "bdboard.pytest_shim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bdboard"]

# Single source of truth for ruff config — read identically by `make lint`,
# `make fmt`, and the code-health CI workflow (.github/workflows/code-health.yml).
# DRY: don't duplicate rule selections in CI; CI just runs `ruff check`.
[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
# F   = pyflakes — includes F401 (unused imports) + dead-code signals
#       (F811 redefinition, F841 unused local var).
# E/W = pycodestyle, I = isort (import hygiene), B = bugbear, UP = pyupgrade.
select = ["E", "F", "W", "I", "B", "UP"]
# E501 line length is handled by the formatter; don't double-flag it.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented idiom is `param: T = typer.Option(...)` in the function
# signature, which B008 (function-call-in-default) flags as a false positive.
"src/bdboard/cli.py" = ["B008"]
